# Better-Threads

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: publish.yaml
BetterThreads/: BetterThreads.py  Pipe.py  PooledThread.py  ThreadPool.py  __init__.py
BetterThreads/errors/: TimeOut.py  __init__.py
examples/: PipeData.py  Simple.py
src/BetterThreads/: BetterThreads.py  __init__.py
tests/: test.py
