[metadata]
name = better-threads
version = 0.2.1
author = Yasiru
author_email = mwmykd@gmail.com
description = This package provides extended control over threads
url = https://github.com/ItsYasiru
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src